--- a/EDA/eda_project1.ipynb
+++ b/EDA/eda_project1.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import seaborn as sns\n",
-    "import numpy as pn\n",
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd"
    ]
